<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity"
    android:background="@color/cardview_light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="25sp"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_login_to_continue_use"
            android:textSize="15sp"
            android:textColor="@color/secondaryText"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/email_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/secondaryText"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            tools:ignore="TextFields"
            android:background="@drawable/editext_design"/>

        <EditText
            android:id="@+id/password_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/secondaryText"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            tools:ignore="TextFields"
            android:background="@drawable/editext_design"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:text="@string/login"
            android:padding="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/signup_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textSize="15sp"
            android:textColor="@color/secondaryText"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

    </LinearLayout>



</RelativeLayout>